--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,18 +3,18 @@
     <div class="branding">
       <a href="#" class="nav-link">
         <span class="clr-icon clr-clarity-logo"></span>
-        <span class="title">Clarity</span>
+        <span class="title">Flickr Recent Photos</span>
       </a>
     </div>
-    <form class="search">
+    <!--<form class="search">
       <label for="search_input">
         <input id="search_input" type="text" placeholder="Search for Components...">
       </label>
-    </form>
+    </form>-->
     <div class="header-actions">
     </div>
   </clr-header>
-  <nav class="sub-nav" [clr-nav-level]="1">
+  <!--<nav class="sub-nav" [clr-nav-level]="1">
     <ul class="nav">
       <li class="nav-item">
         <a class="nav-link" href="#" [routerLink]="['/home']"
@@ -24,9 +24,9 @@
         <a class="nav-link" href="#" [routerLink]="['/about']" [class.active]="router.url==='/about'">About</a>
       </li>
     </ul>
-  </nav>
+  </nav>-->
   <div class="content-container">
-    <div class="content-area">
+    <div class="content-area" infinite-scroll [infiniteScrollDistance]="2" [infiniteScrollThrottle]="300" (scrolled)="onScroll()" [scrollWindow]="false">
       <router-outlet></router-outlet>
     </div>
   </div>
